@@ -754,6 +754,13 @@ OCaml 5.1.0
   exception backtraces for them.
   (Xavier Leroy, review by David Allsopp, report by Fabrice Le Fessant)
 
+- #12265: Stop adding -lexecinfo to cclibs (leftover debugging code from the
+  multicore project). Harden the feature probe for -lm in configure so -lm is
+  only added if strictly necessary. configure.ac now correctly propagates
+  library flags for the Windows ports, allowing Windows OCaml to be configured
+  with ZSTD support.
+  (David Allsopp, review by Sébastien Hinderer)
+
 ### Bug fixes:
 
 - #12017: Re-register finaliser only after calling user alarm in Gc.create_alarm
